<resources>
    <string name="app_name">Movie App</string>
    <string name="signupText">Haven\'t signup yet,</string>
    <string name="click">\u0020 click here</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_theactivity">theactivity</string>

    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="rating">Rating</string>
    <string name="description">Description</string>

    <string name="title_activity_details">Details</string>
    <string name="title_desc">Title</string>
    <string name="director">Director</string>
    <string name="cast_desc">Cast</string>
    <string name="budget" />
    <string name="box_office">Box office</string>
    <string name="genres">Genres</string>
    <string name="runtime">Runtime</string>
    <string name="trailer_button">Trailer</string>
    <string name="cast">Cast</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_search">Search</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming_nav">Upcoming</string>
    <string name="watchlist_nav">WatchList</string>
    <string name="what_to_watch">What to Watch</string>
    <string name="menu_whatto_watch">What to Watch</string>
    <string name="title_top_rated">Top Rated</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="random_generateer">Chose a movie randomly from the top rated movies</string>
    <string name="generate_button">Pick</string>
    <string name="logout">Sign Out</string>
    <string name="title_activity_posts">Posts</string>
    <string name="username">Name</string>
    <string name="datePost">Date added</string>
    <string name="numoflikes">Num. Likes</string>

    <string name="numComments">Num. Comments</string>
    <string name="post_button">Post</string>
    <string name="descPost">Description</string>
    <string name="enterComment">Enter a comment</string>
</resources>
