<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/top_rated"
            android:title="@string/top_rated" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/upcoming"
            android:title="@string/upcoming_nav" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_watch_list"
            android:title="@string/watchlist_nav" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/what_to_watch"
            android:title="@string/what_to_watch" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/logout"
            android:title= "@string/logout" />

    </group>

</menu>
