<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userImgComment"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/theuser"
                app:civ_border_color="#000000"
                app:civ_border_width="2dp" />
            <TextView
                android:id="@+id/nameComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/userImgComment"
                android:text="@string/username" />
            <TextView
                android:id="@+id/DescriptionComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameComment"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/userImgComment"
                android:text="@string/descPost" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dateComment"
                android:layout_toEndOf="@id/userImgComment"
                android:layout_below="@id/DescriptionComment"
                android:text="@string/datePost"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>