<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_margin="@dimen/cardview_compat_inset_shadow">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/postusrImg"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/theuser"
                app:civ_border_color="#000000"
                app:civ_border_width="2dp" />


            <TextView
                android:id="@+id/namePost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/postusrImg"
                android:text="@string/username" />



            <TextView
                android:id="@+id/dateAdded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/namePost"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/postusrImg"
                android:text="@string/datePost" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/opinion"
                android:layout_toEndOf="@id/postusrImg"
                android:layout_below="@id/dateAdded"
                android:text="@string/descPost"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                />

            <ImageView
                android:id="@+id/PostImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/opinion"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:scaleType="centerCrop"
                android:src="@drawable/back_ground" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/PostImg"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/like"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/heart"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/numberofLikes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/numoflikes" />

                <Button
                    android:id="@+id/comments"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/chat"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:id="@+id/commentsNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/numComments" />
            </LinearLayout>


        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>